# ValueInvesting

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6ac299da54a2_initial_schema.py
backend/app/: config.py  main.py
backend/app/agents/: base.py  registry.py  value_agent.py
backend/app/api/: chat.py  health.py  screener.py  stocks.py
backend/app/data/: cache.py
backend/app/data/clients/: __init__.py  _http.py  akshare.py  fmp.py  mairui.py  seekingalpha.py
backend/app/data/providers/: __init__.py  base.py  cn.py  cn_universe.py  hk.py  hk_universe.py  us.py
backend/app/models/: __init__.py  daily_bar.py  enums.py  fundamentals.py  stock.py  watchlist.py
backend/app/screening/: value.py
backend/app/skills/: __init__.py  registry.py
backend/logs/: backend.log.2026-04-20  backend.log.2026-04-21
backend/skills/: README.md  margin-of-safety.md
backend/tests/: test_api_chat.py  test_api_screener.py  test_api_screener_status.py  test_api_stocks.py  test_clients_akshare.py  test_clients_fmp.py  test_clients_mairui.py  test_clients_seekingalpha.py  test_data_cache.py  test_health.py  test_providers_cn.py  test_providers_hk.py  test_providers_us.py  test_screener_persistence.py  test_screener_progress.py  test_screening_value.py  test_skills.py
frontend/: .env.example  README.md  eslint.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/artifacts/: artifact-card.tsx  (+2 more)
(+17 files in other folders)
